[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
dotenv = "0.15.0"

# Spartucus
ark-groth16 = { version = "0.4", default-features = false}
ark-bn254 = { version = "0.4.0", features = ["curve"] }
ark-ec = "0.4.0"
anyhow = "1.0"
sp1-verifier = { version = "4.2.0", features = ["ark"] }
bitvm = { workspace = true }

[build-dependencies]
sp1-build = "4.2.0"